--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -129,6 +129,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\codes\\DeepLearning_Proj\\proj1\\research\\trials.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/codes/DeepLearning_Proj/proj1/research/trials.ipynb#W5sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m model\u001b[39m.\u001b[39mcompile(optimizer\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39madam\u001b[39m\u001b[39m'\u001b[39m, loss\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msparse_categorical_crossentropy\u001b[39m\u001b[39m'\u001b[39m, metrics\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/codes/DeepLearning_Proj/proj1/research/trials.ipynb#W5sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m# Train the model and include the defined callbacks\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/codes/DeepLearning_Proj/proj1/research/trials.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m model\u001b[39m.\u001b[39mfit(x_train, y_train, epochs\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m, validation_data\u001b[39m=\u001b[39m(x_val, y_val), callbacks\u001b[39m=\u001b[39m[checkpoint_callback, early_stopping_callback, reduce_lr_callback])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Define callbacks\n",
+    "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath='model_checkpoint.h5', save_best_only=True)\n",
+    "early_stopping_callback = tf.keras.callbacks.EarlyStopping(patience=3)\n",
+    "reduce_lr_callback = tf.keras.callbacks.ReduceLROnPlateau(factor=0.2, patience=2)\n",
+    "\n",
+    "# Create model\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(64, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# Compile the model and include the callbacks\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model and include the defined callbacks\n",
+    "model.fit(x_train, y_train, epochs=20, validation_data=(x_val, y_val), callbacks=[checkpoint_callback, early_stopping_callback, reduce_lr_callback])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
