training model .ipynb created

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\codes\\DeepLearning_Proj\\proj1\\research\n"
+      "d:\\codes\\DeepLearning_Proj\\proj1\\research\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\codes\\\\DeepLearning_Proj\\\\proj1'"
+       "'d:\\\\codes\\\\DeepLearning_Proj\\\\proj1'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,43 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-25 15:55:28,603] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-25 15:55:28,605] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-25 15:55:28,606] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
-      "[2023-10-25 15:55:28,607] 50 root - INFO - CREATED DIRECTORY AT : artifacts/data_ingestion\n",
-      "[2023-10-25 15:55:32,191] 11 root - INFO - artifacts/data_ingestion/data.zip DOWNLOADED WITH THE FOLOWING INFO Connection: close\n",
-      "Content-Length: 11616915\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: application/zip\n",
-      "ETag: \"f628ef17787ed48d610db016ad6dead1490f6a028d10cc6a9c52fb5e57cba1b9\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 489A:3C6C:3ED879:4CB5B6:6538E73D\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Wed, 25 Oct 2023 10:25:31 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-maa10226-MAA\n",
-      "X-Cache: HIT\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1698229531.759404,VS0,VE282\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 140ecdc89567978e84739377f656399b7fba072c\n",
-      "Expires: Wed, 25 Oct 2023 10:30:31 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "\n"
+      "[2023-11-03 01:35:53,769] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:35:53,772] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:35:53,775] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
+      "[2023-11-03 01:35:53,777] 50 root - INFO - CREATED DIRECTORY AT : artifacts/data_ingestion\n",
+      "[2023-11-03 01:35:53,779] 13 root - INFO - file already exist of size : ~ 11345 KB\n"
      ]
     }
    ],
