--- a/research/02_prepare_base_modle.ipynb
+++ b/research/02_prepare_base_modle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,28 +226,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-27 15:04:23,972] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-27 15:04:23,973] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-27 15:04:23,974] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
-      "[2023-10-27 15:04:23,975] 50 root - INFO - CREATED DIRECTORY AT : artifacts/prepare_base_model\n",
-      "1\n",
-      "save models\n",
-      "<bound method Model.summary of <keras.src.engine.functional.Functional object at 0x00000195A8FA11D0>>\n",
-      "[2023-10-27 15:04:24,424] 359 tensorflow - WARNING - Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-      "2\n",
-      "update_base_model\n",
-      "Model: \"model_6\"\n",
+      "[2023-11-03 01:36:14,128] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:36:14,130] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:36:14,131] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
+      "[2023-11-03 01:36:14,132] 50 root - INFO - CREATED DIRECTORY AT : artifacts/prepare_base_model\n",
+      "<bound method Model.summary of <keras.src.engine.functional.Functional object at 0x000001F931632450>>\n",
+      "WARNING:tensorflow:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+      "[2023-11-03 01:36:14,692] 359 tensorflow - WARNING - Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_34 (InputLayer)       [(None, 224, 224, 3)]     0         \n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
       "                                                                 \n",
       " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
       "                                                                 \n",
@@ -285,17 +282,16 @@
       "                                                                 \n",
       " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
       "                                                                 \n",
-      " flatten_17 (Flatten)        (None, 25088)             0         \n",
+      " flatten (Flatten)           (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense_14 (Dense)            (None, 2)                 50178     \n",
+      " dense (Dense)               (None, 2)                 50178     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 14764866 (56.32 MB)\n",
       "Trainable params: 50178 (196.01 KB)\n",
       "Non-trainable params: 14714688 (56.13 MB)\n",
       "_________________________________________________________________\n",
-      "save models\n",
-      "<bound method Model.summary of <keras.src.engine.functional.Functional object at 0x00000195A8F7B1D0>>\n"
+      "<bound method Model.summary of <keras.src.engine.functional.Functional object at 0x000001F93166F090>>"
      ]
     },
     {
@@ -304,6 +300,13 @@
      "text": [
       "d:\\codes\\DeepLearning_Proj\\proj1\\DLproj1\\Lib\\site-packages\\keras\\src\\engine\\training.py:3079: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
       "  saving_api.save_model(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
