--- a/research/training.ipynb
+++ b/research/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'d:\\\\codes\\\\DeepLearning_Proj\\\\proj1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,12 +202,12 @@
     "    def __init__(self, config: TrainingConfig):\n",
     "        print('-----------------')\n",
     "        self.config = config\n",
-    "    \n",
+    "\n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.models.load_model(\n",
     "            self.config.updated_base_model_path\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    def train_valid_generator(self):\n",
     "\n",
     "        datagenerator_kwargs = dict(\n",
@@ -278,33 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-31 13:20:47,228] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-31 13:20:47,231] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
-      "[2023-10-31 13:20:47,232] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
-      "[2023-10-31 13:20:47,234] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\prepare_callbacks\\checkpoint_dir\n",
-      "[2023-10-31 13:20:47,235] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\prepare_callbacks\\tensorflow_log_dir\n",
-      "PrepareCallbacksConfig(root_dir=WindowsPath('artifacts/prepare_callbacks'), tensorboard_root_log_dir=WindowsPath('artifacts/prepare_callbacks/tensorflow_log_dir'), checkpoint_model_filepath=WindowsPath('artifacts/prepare_callbacks/checkpoint_dir/model.h5'))\n",
-      "-------------------\n",
-      "PrepareCallbacksConfig(root_dir=WindowsPath('artifacts/prepare_callbacks'), tensorboard_root_log_dir=WindowsPath('artifacts/prepare_callbacks/tensorflow_log_dir'), checkpoint_model_filepath=WindowsPath('artifacts/prepare_callbacks/checkpoint_dir/model.h5'))\n",
-      "<__main__.PrepareCallback object at 0x0000022727290150>\n",
+      "[2023-11-03 01:37:36,577] 31 root - INFO - YAML FILE config\\config.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:37:36,583] 31 root - INFO - YAML FILE params.yaml LOADED SUCCESSFULLY\n",
+      "[2023-11-03 01:37:36,585] 50 root - INFO - CREATED DIRECTORY AT : artifacts\n",
+      "[2023-11-03 01:37:36,586] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\prepare_callbacks\\checkpoint_dir\n",
+      "[2023-11-03 01:37:36,588] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\prepare_callbacks\\tensorflow_log_dir\n",
+      "<__main__.PrepareCallback object at 0x000001CCCAABF110>\n",
       "1\n",
       "artifacts\\prepare_callbacks\\checkpoint_dir\\model.h5\n",
-      "[<keras.src.callbacks.TensorBoard object at 0x0000022727326850>, <keras.src.callbacks.ModelCheckpoint object at 0x00000227273337D0>]\n",
+      "[<keras.src.callbacks.TensorBoard object at 0x000001CCCAAB3D90>, <keras.src.callbacks.ModelCheckpoint object at 0x000001CCCAB1B290>]\n",
       "2\n",
-      "[2023-10-31 13:20:47,236] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\training\n",
+      "[2023-11-03 01:37:36,678] 50 root - INFO - CREATED DIRECTORY AT : artifacts\\training\n",
       "TrainingConfig(root_dir=WindowsPath('artifacts/training'), trained_model_path=WindowsPath('artifacts/training/model.h5'), updated_base_model_path=WindowsPath('artifacts/prepare_base_model/base_model_updates.h5'), training_data=WindowsPath('artifacts/data_ingestion/Chicken-fecal-images'), params_epochs=1, params_batch_size=16, params_is_augmentation=True, params_image_size=BoxList([224, 224, 3]))\n",
       "3\n",
       "-----------------\n",
       "Found 78 images belonging to 2 classes.\n",
       "Found 312 images belonging to 2 classes.\n",
-      "19/19 [==============================] - 51s 3s/step - loss: 15.7827 - accuracy: 0.4797 - val_loss: 20.7701 - val_accuracy: 0.3906\n"
+      "19/19 [==============================] - 60s 3s/step - loss: 14.1110 - accuracy: 0.4865 - val_loss: 10.0744 - val_accuracy: 0.6094\n"
      ]
     },
     {
